function(add_iris_test base_name)
	add_executable(${base_name} ${base_name}.cpp)
	target_link_libraries(${base_name} iris)
	add_test(NAME ${base_name} COMMAND ${base_name})
endfunction()

add_iris_test(test_cdd)
add_iris_test(test_append_polyhedron)
add_iris_test(test_mosek_ellipsoid)
add_iris_test(test_for_thin_mosek_ellipsoid_bug)
add_iris_test(test_infeasible_ellipsoid)
add_iris_test(test_closest_point)
add_iris_test(test_separating_hyperplanes)
add_iris_test(test_iris)
add_iris_test(test_required_containment)
